--- a/src/shared/components/NavBar/styles.css
+++ b/src/shared/components/NavBar/styles.css
@@ -3,12 +3,23 @@ nav {
   width: 100%;
   box-shadow: 0 0px 5px #0000001a;
 }
+[data-theme='dark'] nav {
+  background: transparent;
+}
 nav span {
   margin-bottom: 1px;
 }
 
-nav a {
+nav a, nav button {
+  color: var(--link);
+  font-size: 0.95rem;
+}
+[data-theme='light'] nav a, [data-theme='light'] nav button {
   color: var(--dark1);
+}
+nav a:hover, nav a:focus, nav button:hover, nav button:focus {
+  background-size: 0% 1px !important;
+  text-decoration: none;
 }
 
 .nav-inner {
