--- a/src/shared/components/auth/styles.css
+++ b/src/shared/components/auth/styles.css
@@ -30,7 +30,7 @@
   flex-direction: column;
   justify-content: center;
   padding: 40px 180px;
-  background-color: white;
+  background-color: var(--background);
   box-shadow: rgba(0,0,0,0.3) 0px 5px 28px 3px;
 }
 
