Sass, also scoped!

--- a/src/shared/pages/Home/styles.scoped.scss
+++ b/src/shared/pages/Home/styles.scoped.scss
@@ -8,9 +8,10 @@
   width: 100%;
   border-radius: 8px;
   padding: 2rem;
-}
-.home-box h2 {
-  font-size: 1.5rem;
-  color: var(--theme1);
-  margin-bottom: 1rem;
+
+  h2 {
+    font-size: 1.5rem;
+    color: var(--theme1);
+    margin-bottom: 1rem;
+  }
 }
