--- a/src/shared/components/Link/link.scoped.scss
+++ b/src/shared/components/Link/link.scoped.scss
@@ -1,9 +1,5 @@
-.text-button {
+.link {
   color: var(--link);
-  font-size: 1rem;
-  outline: none;
-  border: none;
-  background-color: transparent;
   text-decoration: none;
   font-weight: 600;
   padding-bottom: 1px;
@@ -14,9 +10,9 @@
   background-repeat: no-repeat;
   background-size: 0% 1px;
   transition: background-size .2s;
-}
 
-.text-button:hover, .text-button:focus {
-  background-size: 100% 1px;
-  cursor: pointer;
+  &:hover, &:focus {
+    background-size: 100% 1px;
+    cursor: pointer;
+  }
 }
