--- a/src/shared/components/TextButton/textButton.scoped.scss
+++ b/src/shared/components/TextButton/textButton.scoped.scss
@@ -1,5 +1,9 @@
-.link {
-  color: var(--themeLink);
+.text-button {
+  color: var(--link);
+  font-size: 1rem;
+  outline: none;
+  border: none;
+  background-color: transparent;
   text-decoration: none;
   font-weight: 600;
   padding-bottom: 1px;
@@ -10,9 +14,9 @@
   background-repeat: no-repeat;
   background-size: 0% 1px;
   transition: background-size .2s;
-}
 
-.link:hover, .link:focus {
-  background-size: 100% 1px;
-  cursor: pointer;
+  &:hover, &:focus {
+    background-size: 100% 1px;
+    cursor: pointer;
+  }
 }
