--- a/src/shared/components/auth/auth.scoped.scss
+++ b/src/shared/components/auth/auth.scoped.scss
@@ -6,20 +6,12 @@
   left: 0;
   background: rgba(0, 0, 0, 0.7);
   z-index: 5;
-}
-.modal-backdrop:hover {
-  cursor: pointer;
+
+  &:hover {
+    cursor: pointer;
+  }
 }
 
-.auth-modal::before {
-  height: 10px;
-  width: 100%;
-  position: absolute;
-  content: "";
-  background: linear-gradient(to right, var(--theme1), var(--theme2));
-  top: -3px;
-  left: 0px;
-}
 .auth-modal {
   position: fixed;
   top: 50%;
@@ -32,6 +24,21 @@
   padding: 40px 180px;
   background-color: var(--background);
   box-shadow: rgba(0,0,0,0.3) 0px 5px 28px 3px;
+    
+  @media (max-width: 900px) {
+    padding: 40px 0px;
+    width: 100%;
+  }
+
+  &::before {
+    height: 10px;
+    width: 100%;
+    position: absolute;
+    content: "";
+    background: linear-gradient(to right, var(--theme1), var(--theme2));
+    top: -3px;
+    left: 0px;
+  }
 }
 
 .auth-modal-inner-wrapper {
@@ -39,9 +46,10 @@
   flex-direction: column;
   width: 300px;
   align-items: center;
-}
-.auth-modal-inner-wrapper input {
-  width: 220px;
+
+  input {
+    width: 220px;
+  }
 }
 
 .auth-form {
@@ -57,15 +65,9 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-}
-.auth-modal-navigation>button:not(:last-child) {
-  margin-bottom: 0.5rem;
-}
 
-@media (max-width: 900px) {
-  .auth-modal {
-    padding: 40px 0px;
-    width: 100%;
+  button:not(:last-child) {
+    margin-bottom: 0.5rem;
   }
 }
 
