--- a/src/shared/pages/Home/home.scoped.scss
+++ b/src/shared/pages/Home/home.scoped.scss
@@ -2,16 +2,31 @@
   display: grid;
   grid-template-columns: auto auto;
   gap: 2rem;
+  max-width: 55rem;
+  padding: 0 1rem;
+  margin: 2rem auto;
+
+  @media screen and (max-width: 550px) {
+    grid-template-columns: auto;
+    gap: 1rem;
+    margin-top: 1rem;
+  }
 }
 
 .home-box {
   width: 100%;
+  height: 100%;
   border-radius: 8px;
   padding: 2rem;
 
+  p {
+    font-weight: 300;
+  }
+
   h2 {
     font-size: 1.5rem;
-    color: var(--theme1);
+    color: var(--theme-text);
     margin-bottom: 1rem;
+    text-decoration: none;
   }
 }
