--- a/src/shared/styles/colors.css
+++ b/src/shared/styles/colors.css
@@ -3,7 +3,7 @@
   --theme2: #adfee0;
 
   --link: #3a7fab;
-  --text: #0D0F35;
+  --text: #0d0f35;
   --theme-text: #49ded7;
 
   --background: #fff;
