--- a/src/shared/components/auth/auth.scoped.scss
+++ b/src/shared/components/auth/auth.scoped.scss
@@ -23,8 +23,8 @@
   justify-content: center;
   padding: 40px 180px;
   background-color: var(--background);
-  box-shadow: rgba(0,0,0,0.3) 0px 5px 28px 3px;
-    
+  box-shadow: rgba(0, 0, 0, 0.3) 0px 5px 28px 3px;
+
   @media (max-width: 900px) {
     padding: 40px 0px;
     width: 100%;
@@ -34,7 +34,7 @@
     height: 10px;
     width: 100%;
     position: absolute;
-    content: "";
+    content: '';
     background: linear-gradient(to right, var(--theme1), var(--theme2));
     top: -3px;
     left: 0px;
