--- a/src/shared/styles/fonts.css
+++ b/src/shared/styles/fonts.css
@@ -15,48 +15,48 @@
 
 /* mulish-latin-ext-300-normal*/
 @font-face {
-  font-family: "Mulish";
+  font-family: 'Mulish';
   font-style: normal;
   font-weight: 300;
-  src: url("./fonts/mulish-latin-ext-300-normal.woff");
+  src: url('./fonts/mulish-latin-ext-300-normal.woff');
 }
 
 /* mulish-latin-ext-300-italic*/
 @font-face {
-  font-family: "Mulish";
+  font-family: 'Mulish';
   font-style: italic;
   font-weight: 300;
-  src: url("./fonts/mulish-latin-ext-300-italic.woff");
+  src: url('./fonts/mulish-latin-ext-300-italic.woff');
 }
 
 /* mulish-latin-ext-400-normal*/
 @font-face {
-  font-family: "Mulish";
+  font-family: 'Mulish';
   font-style: normal;
   font-weight: 400;
-  src: url("./fonts/mulish-latin-ext-400-normal.woff");
+  src: url('./fonts/mulish-latin-ext-400-normal.woff');
 }
 
 /* mulish-latin-ext-400-italic*/
 @font-face {
-  font-family: "Mulish";
+  font-family: 'Mulish';
   font-style: italic;
   font-weight: 400;
-  src: url("./fonts/mulish-latin-ext-400-italic.woff");
+  src: url('./fonts/mulish-latin-ext-400-italic.woff');
 }
 
 /* mulish-latin-ext-600-normal*/
 @font-face {
-  font-family: "Mulish";
+  font-family: 'Mulish';
   font-style: normal;
   font-weight: 600;
-  src: url("./fonts/mulish-latin-ext-600-normal.woff");
+  src: url('./fonts/mulish-latin-ext-600-normal.woff');
 }
 
 /* mulish-latin-ext-600-italic*/
 @font-face {
-  font-family: "Mulish";
+  font-family: 'Mulish';
   font-style: italic;
   font-weight: 600;
-  src: url("./fonts/mulish-latin-ext-600-italic.woff");
+  src: url('./fonts/mulish-latin-ext-600-italic.woff');
 }
