--- a/src/shared/styles/shadows.scss
+++ b/src/shared/styles/shadows.scss
@@ -1,7 +1,8 @@
 @mixin simpleshadow {
-  box-shadow: 0 3px 10px rgba(0,0,0,0.15);
-  &:hover, &:focus {
-    box-shadow: 0 5px 15px rgba(0,0,0,0.25);
+  box-shadow: 0 3px 10px rgba(0, 0, 0, 0.15);
+  &:hover,
+  &:focus {
+    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.25);
   }
   transition: box-shadow 150ms;
 }
@@ -10,14 +11,14 @@
 }
 
 @mixin simpleshadowNoHover {
-  box-shadow: 0 3px 10px rgba(0,0,0,0.15);
+  box-shadow: 0 3px 10px rgba(0, 0, 0, 0.15);
 }
 .simple-shadow-no-hover {
   @include simpleshadowNoHover;
 }
 
 @mixin simpleshadowSmall {
-  box-shadow: 0 1px 2px rgba(0,0,0,0.15);
+  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.15);
   position: relative;
   &::before {
     content: ' ';
@@ -26,12 +27,13 @@
     right: 0;
     bottom: 0;
     left: 0;
-    box-shadow: 0 3px 7px rgba(0,0,0,0.18);
+    box-shadow: 0 3px 7px rgba(0, 0, 0, 0.18);
     border-radius: inherit;
     opacity: 0;
     transition: opacity 80ms;
   }
-  &:hover, &:focus {
+  &:hover,
+  &:focus {
     &::before {
       opacity: 1;
     }
@@ -43,7 +45,7 @@
 }
 
 @mixin simpleshadowSmallNoHover {
-  box-shadow: 0 2px 3px rgba(0,0,0,0.15);
+  box-shadow: 0 2px 3px rgba(0, 0, 0, 0.15);
   position: relative;
 }
 .simple-shadow-small-no-hover {
@@ -51,12 +53,13 @@
 }
 
 @mixin simpleShadowSmallBtn {
-  box-shadow: 0 1px 2px rgba(0,0,0,0.15);
-  &:hover, &:focus {
-    box-shadow: 0 3px 7px rgba(0,0,0,0.18);
+  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.15);
+  &:hover,
+  &:focus {
+    box-shadow: 0 3px 7px rgba(0, 0, 0, 0.18);
   }
 }
 
 @mixin simpleshadow-active {
-  box-shadow: 0 5px 15px rgba(0,0,0,0.25);
+  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.25);
 }
