Get the R18 hydration fully functioning

--- a/src/shared/pages/Home/home.scoped.scss
+++ b/src/shared/pages/Home/home.scoped.scss
@@ -1,6 +1,6 @@
 .home-box-container {
   display: grid;
-  grid-template-columns: auto auto;
+  grid-template-columns: 1fr 1fr;
   gap: 2rem;
   max-width: 55rem;
   padding: 0 1rem;
