--- a/src/shared/components/NavBar/navBar.scoped.scss
+++ b/src/shared/components/NavBar/navBar.scoped.scss
@@ -55,7 +55,7 @@ nav {
 
 [data-theme='light'] {
   .nav-link,
-  .small-yiffer-title {
+  .small-yiffer-title a {
     color: var(--dark1);
   }
 }
