--- a/src/shared/pages/Home/home.scoped.scss
+++ b/src/shared/pages/Home/home.scoped.scss
@@ -4,7 +4,7 @@
   gap: 2rem;
   max-width: 55rem;
   padding: 0 1rem;
-  margin: 2rem auto;
+  margin: 2rem auto 0 auto;
 
   @media screen and (max-width: 550px) {
     grid-template-columns: auto;
